--- a/LechebnikProject/Views/AdminPanelWindow.xaml
+++ b/LechebnikProject/Views/AdminPanelWindow.xaml
@@ -1,11 +1,18 @@
 ﻿<Window x:Class="LechebnikProject.Views.AdminPanelWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="ЛЕЧЕБНИК [окно панели администратора]" Height="540" Width="960" WindowStartupLocation="CenterScreen">
-    <StackPanel Margin="10">
-        <Button Content="Открыть управление пользователями" Command="{Binding ManageUsersCommand}" Margin="0,0,0,10"/>
-        <Button Content="Открыть управление препаратами" Command="{Binding ManageMedicinesCommand}" Margin="0,0,0,10"/>
-        <Button Content="Открыть управление отчётами" Command="{Binding ManageReportsCommand}" Margin="0,0,0,10"/>
-        <Button Content="Вернуться к главному меню" Command="{Binding GoBackCommand}"/>
-    </StackPanel>
+        Title="ЛЕЧЕБНИК [окно панели администратора]" Style="{StaticResource Window}" WindowStartupLocation="CenterScreen">
+    <Grid Style="{StaticResource Grid}">
+        <Grid.RowDefinitions>
+            <RowDefinition Height="auto"/>
+            <RowDefinition Height="*"/>
+        </Grid.RowDefinitions>
+        <Label Content="ПАНЕЛЬ АДМИНИСТРАТОРА" Style="{StaticResource  MainHeader}"/>
+        <StackPanel Grid.Row="1" VerticalAlignment="Center">
+            <Button Content="Открыть управление пользователями" Command="{Binding ManageUsersCommand}" Style="{StaticResource Button}"/>
+            <Button Content="Открыть управление препаратами" Command="{Binding ManageMedicinesCommand}" Style="{StaticResource Button}"/>
+            <Button Content="Открыть управление отчётами" Command="{Binding ManageReportsCommand}" Style="{StaticResource Button}"/>
+            <Button Content="Вернуться к главному меню" Command="{Binding GoBackCommand}" Style="{StaticResource Button}"/>
+        </StackPanel>
+    </Grid>
 </Window>
