--- a/LechebnikProject/Views/CartWindow.xaml
+++ b/LechebnikProject/Views/CartWindow.xaml
@@ -1,39 +1,39 @@
 ﻿<Window x:Class="LechebnikProject.Views.CartWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="ЛЕЧЕБНИК [окно корзины]" Height="540" Width="960" WindowStartupLocation="CenterScreen">
-    <Grid Margin="10">
+        Title="ЛЕЧЕБНИК [окно корзины]" Style="{StaticResource Window}" WindowStartupLocation="CenterScreen">
+    <Grid Style="{StaticResource Grid}">
         <Grid.RowDefinitions>
+            <RowDefinition Height="Auto"/>
             <RowDefinition Height="Auto"/>
             <RowDefinition Height="*"/>
             <RowDefinition Height="Auto"/>
         </Grid.RowDefinitions>
-        <StackPanel Grid.Row="0" Orientation="Horizontal">
-            <TextBlock Text="Поиск:" VerticalAlignment="Center" FontWeight="Bold"/>
-            <TextBox Text="{Binding SearchText, UpdateSourceTrigger=PropertyChanged}" Width="850" Margin="5" VerticalContentAlignment="Center"/>
+        <Label Content="КОРЗИНА" Style="{StaticResource MainHeader}"/>
+        <StackPanel Grid.Row="1" Orientation="Horizontal">
+            <Label Content="Поиск:" Style="{StaticResource MainText}" Margin="10,5,5,5"/>
+            <TextBox Text="{Binding SearchText, UpdateSourceTrigger=PropertyChanged}" Style="{StaticResource InputText}" Width="1800" Margin="5"/>
         </StackPanel>
-        <ScrollViewer Grid.Row="1" HorizontalScrollBarVisibility="Visible">
-            <DataGrid ItemsSource="{Binding CartItems}" AutoGenerateColumns="False" IsReadOnly="True">
-                <DataGrid.Columns>
-                    <DataGridTextColumn Header="ID" Binding="{Binding Medicine.MedicineId}" />
-                    <DataGridTextColumn Header="Препарат (название, лекарственная форма, вес/объём)" Binding="{Binding Medicine.Name}"/>
-                    <DataGridTextColumn Header="Приобретаемое количество" Binding="{Binding Quantity}"/>
-                    <DataGridTextColumn Header="Цена за единицу" Binding="{Binding Medicine.Price, StringFormat={}{0:N2} ₽}"/>
-                    <DataGridTextColumn Header="Итоговая сумма" Binding="{Binding TotalPrice, StringFormat={}{0:N2} ₽}"/>
-                    <DataGridTemplateColumn>
-                        <DataGridTemplateColumn.CellTemplate>
-                            <DataTemplate>
-                                <Button Content="Убрать" Command="{Binding DataContext.RemoveCommand, RelativeSource={RelativeSource AncestorType=Window}}" CommandParameter="{Binding}" Margin="5"/>
-                            </DataTemplate>
-                        </DataGridTemplateColumn.CellTemplate>
-                    </DataGridTemplateColumn>
-                </DataGrid.Columns>
-            </DataGrid>
-        </ScrollViewer>
-        <StackPanel Grid.Row="2" Orientation="Horizontal" HorizontalAlignment="Center" Margin="5">
-            <Button Content="Очистить список" Command="{Binding ClearCommand}" FontWeight="Bold" Width="300" Height="30" Margin="5"/>
-            <Button Content="Перейти к оплате" Command="{Binding CheckoutCommand}" IsEnabled="{Binding CanCheckout}" FontWeight="Bold" Width="300" Height="30" Margin="5"/>
-            <Button Content="Вернуться к главному меню" Command="{Binding GoToMainMenuCommand}" FontWeight="Bold" Width="300" Height="30" Margin="5"/>
+        <DataGrid Grid.Row="2" ItemsSource="{Binding CartItems}" AutoGenerateColumns="False" IsReadOnly="True" Margin="10,0,10,0">
+            <DataGrid.Columns>
+                <DataGridTextColumn Header="ID" Binding="{Binding Medicine.MedicineId}" HeaderStyle="{StaticResource ColumnHeader}"/>
+                <DataGridTextColumn Header="Препарат (название, лекарственная форма, вес/объём)" Binding="{Binding Medicine.Name}" HeaderStyle="{StaticResource ColumnHeader}"/>
+                <DataGridTextColumn Header="Приобретаемое количество" Binding="{Binding Quantity}" HeaderStyle="{StaticResource ColumnHeader}"/>
+                <DataGridTextColumn Header="Цена за единицу" Binding="{Binding Medicine.Price, StringFormat={}{0:N2} ₽}" HeaderStyle="{StaticResource ColumnHeader}"/>
+                <DataGridTextColumn Header="Итоговая сумма" Binding="{Binding TotalPrice, StringFormat={}{0:N2} ₽}" HeaderStyle="{StaticResource ColumnHeader}"/>
+                <DataGridTemplateColumn>
+                    <DataGridTemplateColumn.CellTemplate>
+                        <DataTemplate>
+                            <Button Content="Убрать" Command="{Binding DataContext.RemoveCommand, RelativeSource={RelativeSource AncestorType=Window}}" CommandParameter="{Binding}" Style="{StaticResource FuncButton}" Width="auto"/>
+                        </DataTemplate>
+                    </DataGridTemplateColumn.CellTemplate>
+                </DataGridTemplateColumn>
+            </DataGrid.Columns>
+        </DataGrid>
+        <StackPanel Grid.Row="3" Orientation="Horizontal" HorizontalAlignment="Center">
+            <Button Content="ОЧИСТИТЬ СПИСОК" Command="{Binding ClearCommand}" Style="{StaticResource FuncButton}"/>
+            <Button Content="ПЕРЕЙТИ К ОПЛАТЕ" Command="{Binding CheckoutCommand}" IsEnabled="{Binding CanCheckout}" Style="{StaticResource FuncButton}"/>
+            <Button Content="ГЛАВНОЕ МЕНЮ" Command="{Binding GoToMainMenuCommand}" Style="{StaticResource FuncButton}"/>
         </StackPanel>
     </Grid>
 </Window>
