--- a/LechebnikProject/Views/ClientLoginWindow.xaml
+++ b/LechebnikProject/Views/ClientLoginWindow.xaml
@@ -1,16 +1,23 @@
 ﻿<Window x:Class="LechebnikProject.Views.ClientLoginWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="ЛЕЧЕБНИК [окно авторизации клиента]" Height="540" Width="960" WindowStartupLocation="CenterScreen">
-    <Grid Margin="20">
-        <StackPanel>
-            <TextBlock Text="Логин:"/>
-            <TextBox x:Name="LoginTextBox"/>
-            <TextBlock Text="Код:"/>
-            <PasswordBox x:Name="CodePasswordBox"/>
-            <StackPanel Orientation="Horizontal" HorizontalAlignment="Center" Margin="10">
-                <Button Content="Войти" Click="LoginButton_Click" Width="120"/>
-                <Button Content="Зарегистрироваться" Click="RegisterButton_Click" Width="120" Margin="10,0"/>
+        Title="ЛЕЧЕБНИК [окно авторизации клиента]" Style="{StaticResource Window}" WindowStartupLocation="CenterScreen">
+    <Grid Style="{StaticResource Grid}">
+        <Grid.RowDefinitions>
+            <RowDefinition Height="auto"/>
+            <RowDefinition Height="auto"/>
+        </Grid.RowDefinitions>
+        <Label Content="АВТОРИЗАЦИЯ КЛИЕНТА" Style="{StaticResource MainHeader}"/>
+        <StackPanel Grid.Row="1">
+            <Label Content="Логин клиента:" Style="{StaticResource MainText}"/>
+            <TextBox x:Name="LoginTextBox" Style="{StaticResource InputText}"/>
+            <Label Content="Код клиента:" Style="{StaticResource MainText}"/>
+            <PasswordBox x:Name="CodePasswordBox" Style="{StaticResource InputPassword}"/>
+            <StackPanel>
+                <Button Content="АВТОРИЗИРОВАТЬ" Click="LoginButton_Click" Style="{StaticResource Button}"/>
+                <Label Content="Если клиент не зарегистрирован, нажмите кнопку:" Style="{StaticResource Text}" HorizontalAlignment="Center"/>
+                <Button Content="ЗАРЕГИСТРИРОВАТЬ" Click="RegisterButton_Click" Style="{StaticResource Button}"/>
+                <Button Content="ПРОПУСТИТЬ АВТОРИЗАЦИЮ" Click="SkipButton_Click" Style="{StaticResource Button}"/>
             </StackPanel>
         </StackPanel>
     </Grid>
