--- a/LechebnikProject/Views/ClientRegisterWindow.xaml
+++ b/LechebnikProject/Views/ClientRegisterWindow.xaml
@@ -1,37 +1,42 @@
 ﻿<Window x:Class="LechebnikProject.Views.ClientRegisterWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="ЛЕЧЕБНИК [окно регистрации клиента]" Height="540" Width="960" WindowStartupLocation="CenterScreen">
-    <Grid Margin="20">
-        <StackPanel>
-            <TextBlock Text="Фамилия:"/>
-            <TextBox x:Name="LastNameTextBox"/>
-            <TextBlock Text="Имя:"/>
-            <TextBox x:Name="FirstNameTextBox"/>
-            <TextBlock Text="Отчество (опционально):"/>
-            <TextBox x:Name="MiddleNameTextBox"/>
-            <TextBlock Text="Номер телефона:"/>
-            <TextBox x:Name="PhoneNumberTextBox"/>
-            <TextBlock Text="Email:"/>
-            <TextBox x:Name="EmailTextBox"/>
-            <TextBlock Text="Логин:"/>
-            <TextBox x:Name="LoginTextBox"/>
-            <TextBlock Text="Код (6 символов):"/>
-            <PasswordBox x:Name="CodePasswordBox"/>
-            <TextBlock Text="Скидка:"/>
-            <ComboBox x:Name="DiscountComboBox" SelectedValue="{Binding SelectedDiscount}" SelectedValuePath="Tag">
-                <ComboBoxItem Content="15%" Tag="15.00"/>
-                <ComboBoxItem Content="25%" Tag="25.00"/>
-                <ComboBoxItem Content="50%" Tag="50.00"/>
-                <ComboBoxItem Content="75%" Tag="75.00"/>
-            </ComboBox>
-            <TextBlock Text="Введите код с изображения:"/>
-            <Image Source="{Binding CaptchaImage}" Width="100" Height="30"/>
-            <TextBox x:Name="CaptchaTextBox"/>
-            <StackPanel Orientation="Horizontal" HorizontalAlignment="Center" Margin="10">
-                <Button Content="Зарегистрироваться" Click="RegisterButton_Click" Width="120"/>
-                <Button Content="Отмена" Click="CancelButton_Click" Width="120" Margin="10,0"/>
+        Title="ЛЕЧЕБНИК [окно регистрации клиента]" Style="{StaticResource Window}" Height="1200" WindowStartupLocation="CenterScreen">
+    <Grid Style="{StaticResource Grid}">
+        <ScrollViewer>
+            <StackPanel>
+                <Label Content="РЕГИСТРАЦИЯ КЛИЕНТА" Style="{StaticResource MainHeader}"/>
+                <Label Content="Фамилия:" Style="{StaticResource MainText}"/>
+                <TextBox x:Name="LastNameTextBox" Style="{StaticResource InputText}"/>
+                <Label Content="Имя:" Style="{StaticResource MainText}"/>
+                <TextBox x:Name="FirstNameTextBox" Style="{StaticResource InputText}"/>
+                <Label Content="Отчество (опционально):" Style="{StaticResource MainText}"/>
+                <TextBox x:Name="MiddleNameTextBox" Style="{StaticResource InputText}"/>
+                <Label Content="Номер телефона:" Style="{StaticResource MainText}"/>
+                <TextBox x:Name="PhoneNumberTextBox" Style="{StaticResource InputText}"/>
+                <Label Content="Email:" Style="{StaticResource MainText}"/>
+                <TextBox x:Name="EmailTextBox" Style="{StaticResource InputText}"/>
+                <Label Content="Логин:" Style="{StaticResource MainText}"/>
+                <TextBox x:Name="LoginTextBox" Style="{StaticResource InputText}"/>
+                <Label Content="Код (6 символов):" Style="{StaticResource MainText}"/>
+                <PasswordBox x:Name="CodePasswordBox" Style="{StaticResource InputPassword}"/>
+                <Label Content="Скидка:" Style="{StaticResource MainText}"/>
+                <ComboBox x:Name="DiscountComboBox" SelectedValue="{Binding SelectedDiscount}" Style="{StaticResource ComboBox}" SelectedValuePath="Tag">
+                    <ComboBoxItem Content="15%" Tag="15.00"/>
+                    <ComboBoxItem Content="25%" Tag="25.00"/>
+                    <ComboBoxItem Content="50%" Tag="50.00"/>
+                    <ComboBoxItem Content="75%" Tag="75.00"/>
+                </ComboBox>
+                <Label Content="Введите код с изображения:" Style="{StaticResource MainText}"/>
+                <Image Source="{Binding CaptchaImage}" Margin="10,5,0,10"/>
+                <TextBox x:Name="CaptchaTextBox" Style="{StaticResource InputText}"/>
+                <StackPanel HorizontalAlignment="Center" Margin="10">
+                    <Button Content="ЗАРЕГИСТРИРОВАТЬ" Click="RegisterButton_Click" Style="{StaticResource Button}"/>
+                    <Label Content="Если клиент зарегистрирован, нажмите кнопку:" Style="{StaticResource Text}" HorizontalAlignment="Center"/>
+                    <Button Content="АВТОРИЗИРОВАТЬ" Click="RegisterButton_Click" Style="{StaticResource Button}"/>
+                    <Button Content="ОТМЕНИТЬ" Click="CancelButton_Click" Style="{StaticResource Button}"/>
+                </StackPanel>
             </StackPanel>
-        </StackPanel>
+        </ScrollViewer>
     </Grid>
 </Window>
