--- a/LechebnikProject/Views/ContactAdminWindow.xaml
+++ b/LechebnikProject/Views/ContactAdminWindow.xaml
@@ -1,14 +1,15 @@
 ﻿<Window x:Class="LechebnikProject.Views.ContactAdminWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="ЛЕЧЕБНИК [окно связи с администратором]" Height="540" Width="960" WindowStartupLocation="CenterScreen">
-    <Grid>
+        Title="ЛЕЧЕБНИК [окно связи с администратором]" Style="{StaticResource Window}" WindowStartupLocation="CenterScreen">
+    <Grid Style="{StaticResource Grid}">
         <Grid.RowDefinitions>
-            <RowDefinition Height="0.5*"/>
+            <RowDefinition Height="auto"/>
             <RowDefinition Height="2*"/>
             <RowDefinition Height="*"/>
             <RowDefinition Height="Auto"/>
         </Grid.RowDefinitions>
+        <Label Content="СВЯЗЬ С АДМИНИСТРАТОРОМ" Style="{StaticResource MainHeader}"/>
         <ListBox Grid.Row="1" ItemsSource="{Binding Messages}" Margin="10" ScrollViewer.VerticalScrollBarVisibility="Auto">
             <ListBox.ItemTemplate>
                 <DataTemplate>
@@ -20,10 +21,13 @@
                 </DataTemplate>
             </ListBox.ItemTemplate>
         </ListBox>
-        <TextBox Grid.Row="2" Text="{Binding MessageText, UpdateSourceTrigger=PropertyChanged}" Height="auto" AcceptsReturn="True" Margin="10" TextWrapping="Wrap" VerticalScrollBarVisibility="Auto"/>
+        <StackPanel Grid.Row="2">
+            <Label Content="Введите текст сообщения:" Style="{StaticResource MainText}"/>
+            <TextBox Text="{Binding MessageText, UpdateSourceTrigger=PropertyChanged}" Height="80" AcceptsReturn="True" Margin="10,0,10,0" TextWrapping="Wrap" VerticalScrollBarVisibility="Auto"/>
+        </StackPanel>
         <StackPanel Grid.Row="3" Orientation="Horizontal" HorizontalAlignment="Center" Margin="10">
-            <Button Content="Отправить сообщение" Command="{Binding SendCommand}" Width="300" Margin="0,0,10,0"/>
-            <Button Content="Вернуться к главному меню" Command="{Binding GoBackCommand}" Width="300"/>
+            <Button Content="ОТПРАВИТЬ" Command="{Binding SendCommand}" Style="{StaticResource FuncButton}"/>
+            <Button Content="ГЛАВНОЕ МЕНЮ" Command="{Binding GoBackCommand}" Style="{StaticResource FuncButton}"/>
         </StackPanel>
     </Grid>
 </Window>
