--- a/LechebnikProject/Views/ManageUsersWindow.xaml
+++ b/LechebnikProject/Views/ManageUsersWindow.xaml
@@ -1,39 +1,44 @@
 ﻿<Window x:Class="LechebnikProject.Views.ManageUsersWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="ЛЕЧЕБНИК [окно управления пользователями]" Height="540" Width="960" WindowStartupLocation="CenterScreen">
-    <Grid Margin="10">
+        Title="ЛЕЧЕБНИК [окно управления пользователями]" Style="{StaticResource Window}" WindowStartupLocation="CenterScreen">
+    <Grid Style="{StaticResource Grid}">
         <Grid.RowDefinitions>
+            <RowDefinition Height="Auto"/>
             <RowDefinition Height="Auto"/>
             <RowDefinition Height="*"/>
             <RowDefinition Height="Auto"/>
+            <RowDefinition Height="Auto"/>
         </Grid.RowDefinitions>
-        <StackPanel Grid.Row="0" Orientation="Horizontal">
-            <TextBlock Text="Поиск:" VerticalAlignment="Center"/>
-            <TextBox Text="{Binding SearchText, UpdateSourceTrigger=PropertyChanged}" Width="850" Margin="5" VerticalContentAlignment="Center"/>
+        <Label Content="СПИСОК РЕЦЕПТОВ" Style="{StaticResource MainHeader}"/>
+        <StackPanel Grid.Row="1" Orientation="Horizontal">
+            <Label Content="Поиск:" VerticalAlignment="Center" Style="{StaticResource MainText}" Margin="10,5,5,5"/>
+            <TextBox Text="{Binding SearchText, UpdateSourceTrigger=PropertyChanged}" Style="{StaticResource InputText}" Width="1800" Margin="5"/>
         </StackPanel>
-        <DataGrid Grid.Row="1" ItemsSource="{Binding CombinedList}" AutoGenerateColumns="False" SelectedItem="{Binding SelectedItem}" IsReadOnly="True">
+        <DataGrid Grid.Row="2" ItemsSource="{Binding CombinedList}" AutoGenerateColumns="False" SelectedItem="{Binding SelectedItem}" IsReadOnly="True" Margin="10,0,10,0">
             <DataGrid.Columns>
-                <DataGridTextColumn Header="Тип" Binding="{Binding Type}"/>
-                <DataGridTextColumn Header="Логин" Binding="{Binding Login}"/>
-                <DataGridTextColumn Header="Фамилия" Binding="{Binding LastName}"/>
-                <DataGridTextColumn Header="Роль" Binding="{Binding Role}"/>
-                <DataGridTextColumn Header="Статус" Binding="{Binding Status}"/>
-                <DataGridTextColumn Header="Скидка" Binding="{Binding Discount}"/>
+                <DataGridTextColumn Header="Тип" Binding="{Binding Type}" HeaderStyle="{StaticResource ColumnHeader}"/>
+                <DataGridTextColumn Header="Логин" Binding="{Binding Login}" HeaderStyle="{StaticResource ColumnHeader}"/>
+                <DataGridTextColumn Header="Фамилия" Binding="{Binding LastName}" HeaderStyle="{StaticResource ColumnHeader}"/>
+                <DataGridTextColumn Header="Роль" Binding="{Binding Role}" HeaderStyle="{StaticResource ColumnHeader}"/>
+                <DataGridTextColumn Header="Статус" Binding="{Binding Status}" HeaderStyle="{StaticResource ColumnHeader}"/>
+                <DataGridTextColumn Header="Скидка" Binding="{Binding Discount}" HeaderStyle="{StaticResource ColumnHeader}"/>
             </DataGrid.Columns>
         </DataGrid>
-        <StackPanel Grid.Row="2" Orientation="Horizontal" HorizontalAlignment="Center" Margin="5">
-            <Button Content="Добавить" Command="{Binding AddUserCommand}" Width="100" Margin="5"/>
-            <Button Content="Сменить роль" Command="{Binding ChangeRoleCommand}" Width="100" Margin="5"/>
-            <Button Content="Блокировать/Разблокировать" Command="{Binding BlockUserCommand}" Width="200" Margin="5"/>
-            <ComboBox Width="100" Margin="5" SelectedValue="{Binding SelectedDiscount}">
+        <StackPanel Grid.Row="3" Orientation="Horizontal" HorizontalAlignment="Center">
+            <Button Content="ДОБАВИТЬ" Command="{Binding AddUserCommand}" Style="{StaticResource FuncButton}" Width="150"/>
+            <Button Content="СМЕНИТЬ РОЛЬ" Command="{Binding ChangeRoleCommand}" Style="{StaticResource FuncButton}" Width="200"/>
+            <ComboBox Width="60" Margin="5" SelectedValue="{Binding SelectedDiscount}">
                 <ComboBoxItem Content="15%" Tag="15.00"/>
                 <ComboBoxItem Content="25%" Tag="25.00"/>
                 <ComboBoxItem Content="50%" Tag="50.00"/>
                 <ComboBoxItem Content="75%" Tag="75.00"/>
             </ComboBox>
-            <Button Content="Изменить скидку" Command="{Binding ChangeDiscountCommand}" Width="150" Margin="5"/>
-            <Button Content="Вернуться к панели администратора" Command="{Binding GoBackCommand}" Width="250" Margin="5"/>
+            <Button Content="ИЗМЕНИТЬ СКИДКУ" Command="{Binding ChangeDiscountCommand}" Style="{StaticResource FuncButton}"/>
+        </StackPanel>
+        <StackPanel Grid.Row="4" Orientation="Horizontal" HorizontalAlignment="Center">
+            <Button Content="БЛОКИРОВАТЬ/РАЗБЛОКИРОВАТЬ" Command="{Binding BlockUserCommand}" Style="{StaticResource FuncButton}" Width="430"/>
+            <Button Content="АДМИН-ПАНЕЛЬ" Command="{Binding GoBackCommand}" Style="{StaticResource FuncButton}"/>
         </StackPanel>
     </Grid>
 </Window>
