--- a/LechebnikProject/Views/PrescriptionsWindow.xaml
+++ b/LechebnikProject/Views/PrescriptionsWindow.xaml
@@ -1,41 +1,41 @@
 ﻿<Window x:Class="LechebnikProject.Views.PrescriptionsWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="ЛЕЧЕБНИК [окно списка зарегистрированных рецептов]" Height="540" Width="960" WindowStartupLocation="CenterScreen">
-    <Grid Margin="10">
+        Title="ЛЕЧЕБНИК [окно списка зарегистрированных рецептов]" Style="{StaticResource Window}" WindowStartupLocation="CenterScreen">
+    <Grid Style="{StaticResource Grid}">
         <Grid.RowDefinitions>
+            <RowDefinition Height="Auto"/>
             <RowDefinition Height="Auto"/>
             <RowDefinition Height="*"/>
             <RowDefinition Height="Auto"/>
         </Grid.RowDefinitions>
-        <StackPanel Grid.Row="0" Orientation="Horizontal">
-            <TextBlock Text="Поиск:" VerticalAlignment="Center"/>
-            <TextBox Text="{Binding SearchText, UpdateSourceTrigger=PropertyChanged}" Width="850" Margin="5" VerticalContentAlignment="Center"/>
+        <Label Content="СПИСОК РЕЦЕПТОВ" Style="{StaticResource MainHeader}"/>
+        <StackPanel Grid.Row="1" Orientation="Horizontal">
+            <Label Content="Поиск:" VerticalAlignment="Center" Style="{StaticResource MainText}" Margin="10,5,5,5"/>
+            <TextBox Text="{Binding SearchText, UpdateSourceTrigger=PropertyChanged}" Style="{StaticResource InputText}" Width="1800" Margin="5"/>
         </StackPanel>
-        <ScrollViewer Grid.Row="1" HorizontalScrollBarVisibility="Visible">
-            <DataGrid ItemsSource="{Binding Prescriptions}" AutoGenerateColumns="False" IsReadOnly="True">
-                <DataGrid.Columns>
-                    <DataGridTextColumn Header="Серия" Binding="{Binding Series}"/>
-                    <DataGridTextColumn Header="Учреждение" Binding="{Binding MedicalInstitution}"/>
-                    <DataGridTextColumn Header="Фамилия пациента" Binding="{Binding PatientLastName}"/>
-                    <DataGridTextColumn Header="Имя пациента" Binding="{Binding PatientFirstName}"/>
-                    <DataGridTextColumn Header="Отчество пациента" Binding="{Binding PatientMiddleName}"/>
-                    <DataGridTextColumn Header="Код МКБ-10" Binding="{Binding ICD10Code}"/>
-                    <DataGridTextColumn Header="Количество" Binding="{Binding Quantity}"/>
-                    <DataGridTextColumn Header="Тип скидки" Binding="{Binding DiscountType}"/>
-                    <DataGridTextColumn Header="Фамилия врача" Binding="{Binding DoctorLastName}"/>
-                    <DataGridTextColumn Header="Имя врача" Binding="{Binding DoctorFirstName}"/>
-                    <DataGridTextColumn Header="Отчество врача" Binding="{Binding DoctorMiddleName}"/>
-                    <DataGridTextColumn Header="Препарат" Binding="{Binding MedicineId}"/>
-                    <DataGridTextColumn Header="Фармацевт" Binding="{Binding PharmacistId}"/>
-                    <DataGridTextColumn Header="Срок действия" Binding="{Binding ExpiryDate, StringFormat=dd.MM.yyyy}"/>
-                </DataGrid.Columns>
-            </DataGrid>
-        </ScrollViewer>
-        <StackPanel Grid.Row="2" Orientation="Horizontal" HorizontalAlignment="Center" Margin="5">
-            <Button Content="Зарегистрировать новый рецепт" Command="{Binding AddPrescriptionCommand}" Width="300" Margin="5"/>
-            <Button Content="Редактировать" Command="{Binding EditPrescriptionCommand}" Width="300" Margin="5"/>
-            <Button Content="Вернуться к главному меню" Command="{Binding GoBackCommand}" Width="300" Margin="5"/>
+        <DataGrid Grid.Row="2" ItemsSource="{Binding Prescriptions}" AutoGenerateColumns="False" IsReadOnly="True" Margin="10,0,10,0">
+            <DataGrid.Columns>
+                <DataGridTextColumn Header="Серия" Binding="{Binding Series}" HeaderStyle="{StaticResource ColumnHeader}"/>
+                <DataGridTextColumn Header="Учреждение" Binding="{Binding MedicalInstitution}" HeaderStyle="{StaticResource ColumnHeader}"/>
+                <DataGridTextColumn Header="Фамилия пациента" Binding="{Binding PatientLastName}" HeaderStyle="{StaticResource ColumnHeader}"/>
+                <DataGridTextColumn Header="Имя пациента" Binding="{Binding PatientFirstName}" HeaderStyle="{StaticResource ColumnHeader}"/>
+                <DataGridTextColumn Header="Отчество пациента" Binding="{Binding PatientMiddleName}" HeaderStyle="{StaticResource ColumnHeader}"/>
+                <DataGridTextColumn Header="Код МКБ-10" Binding="{Binding ICD10Code}" HeaderStyle="{StaticResource ColumnHeader}"/>
+                <DataGridTextColumn Header="Количество" Binding="{Binding Quantity}" HeaderStyle="{StaticResource ColumnHeader}"/>
+                <DataGridTextColumn Header="Тип скидки" Binding="{Binding DiscountType}" HeaderStyle="{StaticResource ColumnHeader}"/>
+                <DataGridTextColumn Header="Фамилия врача" Binding="{Binding DoctorLastName}" HeaderStyle="{StaticResource ColumnHeader}"/>
+                <DataGridTextColumn Header="Имя врача" Binding="{Binding DoctorFirstName}" HeaderStyle="{StaticResource ColumnHeader}"/>
+                <DataGridTextColumn Header="Отчество врача" Binding="{Binding DoctorMiddleName}" HeaderStyle="{StaticResource ColumnHeader}"/>
+                <DataGridTextColumn Header="Препарат" Binding="{Binding MedicineId}" HeaderStyle="{StaticResource ColumnHeader}"/>
+                <DataGridTextColumn Header="Фармацевт" Binding="{Binding PharmacistId}" HeaderStyle="{StaticResource ColumnHeader}"/>
+                <DataGridTextColumn Header="Срок действия" Binding="{Binding ExpiryDate, StringFormat=dd.MM.yyyy}" HeaderStyle="{StaticResource ColumnHeader}"/>
+            </DataGrid.Columns>
+        </DataGrid>
+        <StackPanel Grid.Row="3" Orientation="Horizontal" HorizontalAlignment="Center">
+            <Button Content="ЗАРЕГИСТРИРОВАТЬ" Command="{Binding AddPrescriptionCommand}" Style="{StaticResource FuncButton}"/>
+            <Button Content="РЕДАКТИРОВАТЬ" Command="{Binding EditPrescriptionCommand}" Style="{StaticResource FuncButton}"/>
+            <Button Content="ГЛАВНОЕ МЕНЮ" Command="{Binding GoBackCommand}" Style="{StaticResource FuncButton}"/>
         </StackPanel>
     </Grid>
 </Window>
