--- a/LechebnikProject/Views/QuantityInputWindow.xaml
+++ b/LechebnikProject/Views/QuantityInputWindow.xaml
@@ -1,16 +1,21 @@
 ﻿<Window x:Class="LechebnikProject.Views.QuantityInputWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="ЛЕЧЕБНИК [окно ввода количества приобретаемого препарата]" Height="540" Width="960" WindowStartupLocation="CenterScreen">
-    <Grid Margin="20">
-        <StackPanel>
-            <TextBlock Text="Приобретаемый препарат:"/>
-            <TextBlock Text="{Binding SelectedMedicine.Name}" Margin="0,0,0,10"/>
-            <TextBlock Text="Введите количество:"/>
-            <TextBox Text="{Binding Quantity, UpdateSourceTrigger=PropertyChanged}" Width="100" Height="25" Margin="0,0,0,10"/>
+        Title="ЛЕЧЕБНИК [окно ввода количества приобретаемого препарата]" Style="{StaticResource Window}" WindowStartupLocation="CenterScreen">
+    <Grid Style="{StaticResource Grid}">
+        <Grid.RowDefinitions>
+            <RowDefinition Height="auto"/>
+            <RowDefinition Height="auto"/>
+        </Grid.RowDefinitions>
+        <Label Content="КОЛИЧЕСТВО ПРЕПАРАТОВ" Style="{StaticResource MainHeader}"/>
+        <StackPanel Grid.Row="1" HorizontalAlignment="Center" VerticalAlignment="Center">
+            <Label Content="Приобретаемый препарат:" Style="{StaticResource MainText}"/>
+            <Label Content="{Binding SelectedMedicine.Name}" Style="{StaticResource MainText}"/>
+            <Label Content="Введите количество:" Style="{StaticResource MainText}"/>
+            <TextBox Text="{Binding Quantity, UpdateSourceTrigger=PropertyChanged}" Style="{StaticResource InputText}"/>
             <StackPanel Orientation="Horizontal" HorizontalAlignment="Center">
-                <Button Content="Добавить в корзину" Command="{Binding AddCommand}" Width="200" Height="30" Margin="5"/>
-                <Button Content="Отменить добавление" Command="{Binding CancelCommand}" Width="200" Height="30" Margin="5"/>
+                <Button Content="Добавить в корзину" Command="{Binding AddCommand}" Style="{StaticResource FuncButton}" Width="300"/>
+                <Button Content="Отменить добавление" Command="{Binding CancelCommand}" Style="{StaticResource FuncButton}" Width="300"/>
             </StackPanel>
         </StackPanel>
     </Grid>
